@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
  <javascript authenticated="False" cacheable="True" compression="none"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="jquery.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="none"
     conditionalcomment="" cookable="True" enabled="True"
@@ -49,108 +48,82 @@
     conditionalcomment="" cookable="True" enabled="True" expression=""
     id="swfobject.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.tagcloud.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.select2uislider.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.jstree.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.cookie.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.bbq.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.ajaxfileupload.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="jquery-integration.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="none"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++plone.app.jquerytools.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++plone.app.jquerytools.form.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="none"
-    conditionalcomment="" cookable="True" enabled="False"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="False" expression=""
     id="++resource++plone.app.jquerytools.validator.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="none"
-    conditionalcomment="" cookable="True" enabled="False"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="False" expression=""
     id="++resource++plone.app.jquerytools.rangeinput.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="none"
-    conditionalcomment="" cookable="True" enabled="False"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="False" expression=""
     id="++resource++plone.app.jquerytools.dateinput.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="none"
-    conditionalcomment="" cookable="True" enabled="False"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="False" expression=""
     id="++resource++plone.app.jquerytools.plugins.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++plone.app.jquerytools.overlayhelpers.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++eea.tags.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.tokeninput.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.splitter.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.reflect.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.jqzoom.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.timers.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.galleryview.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.flashembed.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++jquery.fancybox.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eeareferencebrowser.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="faceted_view.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="readiness.js" inline="False"/>
  <javascript authenticated="True" cacheable="True" compression="none"
     conditionalcomment="" cookable="False" enabled="True" expression=""
@@ -160,88 +133,70 @@
     expression="python:here.restrictedTraverse('@@plone_portal_state').anonymous()"
     id="framebreak.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-accordion.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="form_tabbing.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="jquery.highlightsearchterms.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="createversion.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++eea.dataservice.view.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea.geotags.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="none"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="promotion_gallery.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="promo_gallery.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="whatsnew_gallery.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="print_warning.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-fancybox.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-mediacentre.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-autoscroll.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-tooltips.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-galleryview.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-toc.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-fullscreen.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="eea-smartview.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'" id="slide.js"
-    inline="False"/>
+    conditionalcomment="" cookable="True" enabled="True" expression=""
+    id="eea-tabs.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
+    id="slide.js" inline="False"/>
+ <javascript authenticated="False" cacheable="True" compression="safe"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="soer_frontpage.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
     id="++resource++flowplayer-html/flowplayer-3.2.2.min.js" inline="False"/>
  <javascript authenticated="True" cacheable="True" compression="safe"
     conditionalcomment="" cookable="True" enabled="True" expression=""
@@ -382,8 +337,7 @@
     expression="python: not here.restrictedTraverse('@@plone_portal_state').anonymous() and here.restrictedTraverse('@@kss_devel_mode').ison()"
     id="++resource++kukit-devel.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="False"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    conditionalcomment="" cookable="True" enabled="False" expression=""
     id="popupforms.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
     conditionalcomment="" cookable="True" enabled="True" expression=""
@@ -432,11 +386,25 @@
     expression="python:'daviz' in request.URL0"
     id="++resource++eea.googlecharts.chart.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
-    conditionalcomment="" cookable="True" enabled="False"
+    conditionalcomment="" cookable="True" enabled="True"
     expression="python:'daviz' in request.URL0"
     id="++resource++eea.googlecharts.datatable.js" inline="False"/>
  <javascript authenticated="False" cacheable="True" compression="safe"
     conditionalcomment="" cookable="True" enabled="True"
-    expression="python:'daviz' in request.URL0" id="custom_datatable.js"
-    inline="False"/>
+    expression="python:'daviz' in request.URL0"
+    id="++resource++eea.googlecharts.palettes.js" inline="False"/>
+ <javascript authenticated="False" cacheable="True" compression="safe"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
+    id="++resource++eea.sparql.js" inline="False"/>
+ <javascript authenticated="False" cacheable="True" compression="safe"
+    conditionalcomment="" cookable="True" enabled="True"
+    expression="python:'daviz-view.html' in request.URL0"
+    id="++resource++eea.exhibit.view.js" inline="False"/>
+ <javascript authenticated="False" cacheable="True" compression="safe"
+    conditionalcomment="" cookable="True" enabled="True"
+    expression="python:'daviz-edit.html' in request.URL0"
+    id="++resource++eea.exhibit.edit.js" inline="False"/>
+ <javascript authenticated="False" cacheable="True" compression="safe"
+    conditionalcomment="" cookable="True" enabled="True" expression=""
+    id="change_workflow_state.js" inline="False"/>
 </object>
