@@ -3,7 +3,9 @@ Changelog
 
 4.22-dev - (unreleased)
 -----------------------
-
+ * Change: removed jsdisable condition from js resources
+   [szabozo0 #5095]
+ 
 4.21 - (2012-04-26)
 -------------------
  * Bug fix: now all objects that are copied have their creation
